--- a/SegundaActivdad/app/src/main/res/layout-land/activity_mostrar_datos.xml
+++ b/SegundaActivdad/app/src/main/res/layout-land/activity_mostrar_datos.xml
@@ -13,8 +13,8 @@
 
         android:layout_width="250dp"
         android:layout_height="22dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="12dp"
         android:layout_x="10dp"
         android:layout_y="60dp"
         android:hint="@string/Nombre2"
@@ -25,7 +25,8 @@
         android:id="@+id/Nombre2b"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
         android:hint="@string/Nombre2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,8 +36,8 @@
         android:layout_width="250dp"
         android:layout_height="16dp"
 
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="12dp"
 
         android:layout_x="102dp"
         android:layout_y="106dp"
@@ -48,7 +49,7 @@
         android:id="@+id/Cal2b"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="72dp"
         android:layout_x="102dp"
         android:layout_y="106dp"
         android:hint="@string/Fecha"
@@ -141,7 +142,10 @@
         android:layout_y="424dp"
         android:hint="@string/Editar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-52dp" />
+        app:layout_constraintVertical_bias="0.955" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
